--- a/cy/templates/cy/index.html
+++ b/cy/templates/cy/index.html
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+<link rel="icon" href="/static/ico/favicon.ico" mce_href="/static/ico/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/static/ico/favicon.ico" mce_href="/static/ico/favicon.ico" type="image/x-icon">
 <title>Web Shell</title>
 <style type="text/css">
 	*:focus {outline: none;}
