--- a/cy/templates/cy/index.html
+++ b/cy/templates/cy/index.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" href="/static/ico/favicon.ico" mce_href="/static/ico/favicon.ico" type="image/x-icon">
 <title>Web Shell</title>
 <style type="text/css">
-	*:focus {outline: none;}
+	*:focus {outline: none; word-break:break-all}
 	.textDiv{color:green}
 	body{background-color: black}
 </style>
