--- a/cy/templates/cy/index.html
+++ b/cy/templates/cy/index.html
@@ -7,8 +7,8 @@
 <title>Web Shell</title>
 <style type="text/css">
 	*:focus {outline: none; word-break:break-all}
-	.textDiv{color:green}
-	body{background-color: black}
+	.textDiv{color:green;}
+	body{background-color: black;}
 </style>
 </head>
 <body>
