--- a/cy/templates/cy/index.html
+++ b/cy/templates/cy/index.html
@@ -264,7 +264,7 @@ $(document).ready(function(){
 		$("html,body").animate({scrollTop:$("#bottom").offset().top},0)
 	}
 
-	appendText(commandHandler("wellcome"));
+	appendText(commandHandler("welcome"));
 	appendText(_WEB_SHELL);
 });
 </script>
