--- a/cy/templates/cy/index.html
+++ b/cy/templates/cy/index.html
@@ -35,6 +35,7 @@
 			},
 			error:function(data){
 				console.log("get error -> " + data);
+				result = "command error"
 			}
 		});
 		return result;
