--- a/cy/templates/cy/index.html
+++ b/cy/templates/cy/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
 </head>
 <body>
-<div id='stars'></div>
-<div id='stars2'></div>
-<div id='stars3'></div>
+<!--<div id='stars'></div>-->
+<!--<div id='stars2'></div>-->
+<!--<div id='stars3'></div>-->
 <script type="text/javascript" src="/static/js/jquery.min.js"></script>
 
 <script type="text/javascript">
