--- a/cy/static/css/style.css
+++ b/cy/static/css/style.css
@@ -4,8 +4,8 @@ min-height: 100%;
 height:100%; 
 min-width: 100%;
 width: 100%;
-  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-  overflow: hidden;
+background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+overflow: hidden;
 } 
 body { 
 margin: 0; 
@@ -81,6 +81,6 @@ width: 100%;
 #insidePage{
   width: 100%;
   height: 100%;
-  padding-bottom: 10px;
-  margin-left: 20px;
+  /*padding-bottom: 10px;
+  margin-left: 20px;*/
 }
